# m1_core

./: .gitignore  Makefile  PACKFILE_SPEC.txt  README  README.add_channel  README.drm  README.key  README.m1  README.magnus_enc  README.md  TODO  Version.inc  WISH_LIST.m1  config.h.in  configure.ac  doxygen.cfg  doxygen_m1.cfg
bdf/: RadioSpaceR12.bdf  RadioSpaceR14.bdf  RadioSpaceR18.bdf  RadioSpaceR20.bdf  RadioSpaceR22.bdf  RadioSpaceR24.bdf
doc/: m1_language.txt
edf/: Big-OrangeBlack.edf  GearBig-OrangeBlack.edf  GearSmall-OrangeBlack.edf  Small-OrangeBlack.edf
fonts/: Big-OrangeBlack.efnt  Changeling-Regular10.efnt  Changeling-Regular12.efnt  Changeling-Regular14.efnt  Changeling-Regular16.efnt  Changeling-Regular18.efnt  Changeling-Regular20.efnt  Changeling-Regular22.efnt  Changeling-Regular24.efnt  Changeling-Regular26.efnt  Changeling-Regular28.efnt  Changeling-Regular30.efnt  Changeling-Regular32.efnt  Changeling-Regular34.efnt  Changeling-Regular36.efnt  RadioSpaceR12.efnt  RadioSpaceR14.efnt  RadioSpaceR18.efnt  RadioSpaceR20.efnt  RadioSpaceR22.efnt  RadioSpaceR24.efnt  Radiof23.efnt  RadiofR12.efnt  RadiofR14.efnt  RadiofR18.efnt  RadiofR20.efnt  RadiofR22.efnt  RadiofR24.efnt  Radiofi10.efnt  Radiofi12.efnt  Radiofi14.efnt  Radiofi16.efnt  Radiofi18.efnt  Radiofi20.efnt  Radiofi22.efnt  Radiofi24.efnt  Radiofi26.efnt  Radiofi28.efnt  Radiofi30.efnt  Radiofi32.efnt  (+48 more)
images/: BlueGlow-TB-Small-Incre-Normal.dds  LIFESTYLE-800x480-Alum1-Background.dds  LIFESTYLE-800x480-Alum1-Combined.dds  LIFESTYLE-800x480-Alum1-HiLiteLayer.dds  LIFESTYLE-800x480-Alum1-Overlay.dds  OS-Symbol-Ok.dds  TB-BACKGROUND-BlueGlow_bgra.dds  TB-BACKGROUND-BlueGlow_rgba.dds  TB-Numbers-RedYellFlame-Big.dds  tst.csv  wg_gdo_1.mpg  wg_gdo_2.mpg
include/: bio_stream.hh  can_device.hh  color.hh  color_interpolator.hh  component.hh  config.h  database.hh  db_component.hh  dds_common.h  dds_component.hh  dev_component.hh  epic_input_device.hh  epic_thread.hh  epx_input_device.hh  epx_thread.hh  event_player.hh  event_recorder.hh  fastmemcpy.h  fft.hh  font_cache.hh  format_component.hh  geometric.hh  image_component.hh  input_device.hh  input_strategy.hh  interpolator.hh  key.hh  key_store.hh  key_util.hh  m1.hh  m1c.hh  m1rt.hh  m1vm.hh  m1vm_format.hh  m1vm_opcodes.hh  message.hh  octet_buffer.hh  packfile.hh  pfl_component.hh  plot_component.hh  (+9 more)
keys/: demo.h  demo.key  demo.pub  magden.key  magden.pub  s123456.key  s123456.pub
m1/: t0.m1
src/: Makefile.in  Makefile.packtst  Makefile~  bf_zlib.c  bf_zlib.h  bio_stream.cc  can_device.cc  color.cc  color_interpolator.cc  component.cc  database.cc  db_component.cc  dds_component.cc  dds_file.cc  (+58 more)
(+145 files in other folders)
